Work update, save, delete student

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.application.name=my-data-base
 server.port=8080
 
+spring.freemarker.template-loader-path: classpath:/templates
+spring.freemarker.suffix: .ftlh
